kubernetes_file/stateful/fluvio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fluvio-virtual-service
  namespace: fluvio
spec:
  hosts:
    - "*"
  gateways:
    - fluvio-gateway
  tcp:
    - match:
        - port: 30003
      route:
        - destination:
            host: fluvio
            port:
              number: 30003
